--- a/tetris/tetris/tetris.vcxproj.filters
+++ b/tetris/tetris/tetris.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="GameClient.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\..\Downloads\MultithreadTCPServer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\Downloads\TCPClient_FixedVariable.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
