--- a/tetris_server/tetris_server/tetris_server.vcxproj
+++ b/tetris_server/tetris_server/tetris_server.vcxproj
@@ -140,6 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="socket_err.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="socket_err.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
