GameClient.cpp 수정
생성자, 소멸자가 안 들어가 있던 것을 수정

--- a/tetris/tetris/tetris.vcxproj
+++ b/tetris/tetris/tetris.vcxproj
@@ -147,9 +147,11 @@
     </ClCompile>
     <ClCompile Include="GameClient.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameClient.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
