--- a/tetris_server/tetris_server/tetris_server.vcxproj.filters
+++ b/tetris_server/tetris_server/tetris_server.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="socket_err.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="MatchMaking.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="socket_err.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MatchMaking.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
