--- a/tetris_server/tetris_server/tetris_server.vcxproj
+++ b/tetris_server/tetris_server/tetris_server.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameServer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MatchMaking.cpp" />
     <ClCompile Include="socket_err.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameServer.h" />
     <ClInclude Include="MatchMaking.h" />
     <ClInclude Include="socket_err.h" />
     <ClInclude Include="stdafx.h" />
