파일이름 변경
socket_err -> socket_function

소켓 에러 처리, 데이터 전송 등 네트워크 관련 사용자 함수 파일

--- a/tetris_server/tetris_server/tetris_server.vcxproj
+++ b/tetris_server/tetris_server/tetris_server.vcxproj
@@ -142,12 +142,12 @@
     <ClCompile Include="GameServer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MatchMaking.cpp" />
-    <ClCompile Include="socket_err.cpp" />
+    <ClCompile Include="socket_function.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameServer.h" />
     <ClInclude Include="MatchMaking.h" />
-    <ClInclude Include="socket_err.h" />
+    <ClInclude Include="socket_function.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
