--- a/tetris_server/tetris_server/tetris_server.vcxproj.filters
+++ b/tetris_server/tetris_server/tetris_server.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="socket_err.cpp">
+    <ClCompile Include="socket_function.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="MatchMaking.cpp">
@@ -32,7 +32,7 @@
     <ClInclude Include="stdafx.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="socket_err.h">
+    <ClInclude Include="socket_function.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="MatchMaking.h">
