recvMsg on Client
클라이언트에서 서버 쪽에서 보내는 메세지 수신
클라이언트에서 사용하는 Get, Set SOCKET 함수 추가
서버에서 Msg_WaitGame만 보내는 문제 수정
파일 이름 변경 socket_err -> socket_function

--- a/tetris/tetris/tetris.vcxproj
+++ b/tetris/tetris/tetris.vcxproj
@@ -151,7 +151,7 @@
     <ClCompile Include="GamePlayScene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="socket_err.cpp" />
+    <ClCompile Include="socket_function.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="WaitScene.cpp" />
@@ -160,7 +160,7 @@
     <ClInclude Include="GameClient.h" />
     <ClInclude Include="GamePlayScene.h" />
     <ClInclude Include="Scene.h" />
-    <ClInclude Include="socket_err.h" />
+    <ClInclude Include="socket_function.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="TitleScene.h" />
