--- a/tetris/tetris/tetris.vcxproj.filters
+++ b/tetris/tetris/tetris.vcxproj.filters
@@ -10,7 +10,7 @@
     <ClCompile Include="..\..\..\..\..\Downloads\MultithreadTCPServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="socket_err.cpp">
+    <ClCompile Include="socket_function.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\..\Downloads\TCPClient_FixedVariable.cpp">
@@ -54,7 +54,7 @@
     <ClInclude Include="WaitScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="socket_err.h">
+    <ClInclude Include="socket_function.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
