--- a/tetris_server/tetris_server/tetris_server.vcxproj
+++ b/tetris_server/tetris_server/tetris_server.vcxproj
@@ -143,12 +143,14 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MatchMaking.cpp" />
     <ClCompile Include="socket_function.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameServer.h" />
     <ClInclude Include="MatchMaking.h" />
     <ClInclude Include="socket_function.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
