플레이 화면 꾸미기

--- a/tetris/tetris/tetris.vcxproj
+++ b/tetris/tetris/tetris.vcxproj
@@ -167,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\block.bmp" />
+    <Image Include="textures\ui.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
