--- a/tetris/tetris/tetris.vcxproj.filters
+++ b/tetris/tetris/tetris.vcxproj.filters
@@ -78,5 +78,8 @@
     <Image Include="textures\block.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="textures\ui.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
