--- a/tetris/tetris/tetris.vcxproj.filters
+++ b/tetris/tetris/tetris.vcxproj.filters
@@ -82,4 +82,9 @@
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="sound\BGM.wav">
+      <Filter>리소스 파일</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
