--- a/tetris/tetris/tetris.vcxproj
+++ b/tetris/tetris/tetris.vcxproj
@@ -169,6 +169,9 @@
     <Image Include="textures\block.bmp" />
     <Image Include="textures\ui.bmp" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="sound\BGM.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
